fix: alert visibility

--- a/src/components/ui/alert/Alert.css
+++ b/src/components/ui/alert/Alert.css
@@ -15,7 +15,7 @@
     border-radius: var(--border-radius-8);
     font-size: var(--font-size-medium);
     animation: fadeInDown 0.5s forwards/*, fadeOutUp 0.5s forwards 2.5s*/;
-    z-index: 1000;
+    z-index: 999999;
 }
 
 @keyframes fadeInDown {
